--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <audio class="song" loop autoplay>
-        <source src="./music/Justin Bieber - One Time.mp3">
+        <source src="./music/Justin Bieber-V2.mp3">
         </source>
         Your browser isn't invited for super fun audio time.
     </audio>
@@ -28,10 +28,10 @@
     <div class="container">
         <div class="one">
             <h1 class="one">
-                Aye
-                <span id="name"> yo Minkky!</span>
+                Aye yo
+                <span id="name">Minkky!</span>
             </h1>
-            <p class="two" id="greetingText">This program is supported by PaoPee.</p>
+            <p class="two" id="greetingText">This program is supported by <strong>PaoPee.</strong></p>
         </div>
 
         <div class="three">
@@ -49,7 +49,10 @@
         <div class="four">
             <div class="profile">
                 <img src="./img/Robin.png" alt="Profile Picture" class="profile-image" />
-                <h2 class="profile-name">Mingkamon 💚</h2>
+                <h2 class="profile-name">
+  <span class="star-name">Mingkamon</span> 💚
+</h2>
+
             </div>
             <div class="text-box">
                 <p class="hbd-chatbox">
@@ -65,16 +68,11 @@
 	                            เวลาที่คุณยิ้มออกมา</p>
             <p class="idea-3">
                 It makes me <strong>smile</strong> &nbsp;&nbsp;too! <br><br>
-	            มันทำให้ผม<strong>ยิ้ม</strong>&nbsp;&nbsp;ไปด้วย!
-                <br>
-                
-                .
             </p>
             <p class="idea-4">Because of... <br><br> คงเป็นเพราะว่า...</p> 
                             
             <p class="idea-5">
-                You are Special <span>:)</span> <br><br> คุณนั้นพิเศษยังไงล่ะ
-                <span>:)</span>
+                You are Special <span>:)</span> 
             </p>
             <p class="idea-6">
                 <span>S</span>
@@ -87,7 +85,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">So keep your smile, because your smile makes the world shine so much. ;) <br><br> เพราะงั้น ยิ้มเข้าไว้นะเพราะรอยยิ้มของคุณนั้นทำให้โลกนี้สดใสขึ้นมากเลยล่ะ</h5>
+                <h5 id="wishText">So keep your smile, because your smile makes the world shine so much. ;) </h5>
             </div>
         </div>
 
