--- a/index.html
+++ b/index.html
@@ -27,12 +27,25 @@
 
     <div class="container">
         <div class="one">
-            <h1 class="one">
-                Aye yo
-                <span id="name">Minkky!</span>
-            </h1>
-            <p class="two" id="greetingText">This program is supported by <strong>PaoPee.</strong></p>
-        </div>
+    <h1 class="one name-wrap">
+        Aye yo
+        <span class="name-box">
+            <img src="img/is You.gif"
+                 class="side-gif" alt="left gif">
+
+            <span id="name">Minkky!</span>
+
+            <img src="img/is You.gif"
+                 class="side-gif" alt="right gif">
+        </span>
+    </h1>
+
+    <!-- ✅ ข้อความกลับมาแล้ว -->
+    <p class="two" id="greetingText">
+        This program is supported by <strong>PaoPee.</strong>
+    </p>
+</div>
+
 
         <div class="three">
             <p>It's your birthday!! :D</p>
@@ -48,7 +61,7 @@
 
         <div class="four">
             <div class="profile">
-                <img src="./img/Robin.png" alt="Profile Picture" class="profile-image" />
+                <img src="./img/Is You.png" alt="Profile Picture" class="profile-image" />
                 <h2 class="profile-name">
   <span class="star-name">Mingkamon</span> 💚
 </h2>
@@ -85,7 +98,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">So keep your smile, because your smile makes the world shine so much. ;) </h5>
+                <h5 id="wishText">So keep your smile. eiei ˃ᴗ˂ </h5>
             </div>
         </div>
 
@@ -146,9 +159,10 @@
         </div>
 
         <div class="nine">
-            <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
-            <p>With all my love, from your Afsify </p>
+            <p>PP ก็ขออวยพรให้มิ้งอีกครั้ง ขอให้มิ้งโชคดีตลอดไป!🍀ྀི</p>
+            <p>หวังว่าสิ่งนี้พอจะทำให้มิ้งยิ้มได้น้าาา </p>
+            <p id="replay">หรือกดคลิก! ถ้าอยากจะดูอีกครั้ง</p>
+            <p>Goodluck & See yaa!!</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
