--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <div class="container">
         <div class="one">
     <h1 class="one name-wrap">
-        Aye yo
+        Aye yo 
         <span class="name-box">
             <img src="img/is You.gif"
                  class="side-gif" alt="left gif">
 
-            <span id="name">Minkky!</span>
+            <span id="name"><br>Minkky!</span>
 
             <img src="img/is You.gif"
                  class="side-gif" alt="right gif">
