--- a/index.html
+++ b/index.html
@@ -27,23 +27,25 @@
 
     <div class="container">
         <div class="one">
+    <div class="one">
     <h1 class="one name-wrap">
-        Aye yo
-        <span class="name-box">
-            <img src="img/is You.gif"
-                 class="side-gif" alt="left gif">
+        <span class="aye">Aye yo</span>
 
-            <span id="name">Minkky!</span>
+        <span id="name">
+            Minkky!
+            <img src="https://media2.giphy.com/media/v1.Y2lkPTZjMDliOTUydXJ0eDc2bDU0NTg2ZnY3azBxdnlveTc4azE3NTF1aGJuZmZveDNoNyZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/EGNi09y1CXeyA/200.gif"
+                 class="corner-gif left-top">
 
-            <img src="img/is You.gif"
-                 class="side-gif" alt="right gif">
+            <img src="https://media2.giphy.com/media/v1.Y2lkPTZjMDliOTUydXJ0eDc2bDU0NTg2ZnY3azBxdnlveTc4azE3NTF1aGJuZmZveDNoNyZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/EGNi09y1CXeyA/200.gif"
+                 class="corner-gif right-top">
         </span>
     </h1>
 
-    <!-- ✅ ข้อความกลับมาแล้ว -->
     <p class="two" id="greetingText">
         This program is supported by <strong>PaoPee.</strong>
     </p>
+</div>
+
 </div>
 
 
