--- a/index.html
+++ b/index.html
@@ -22,30 +22,19 @@
     <audio class="song" loop autoplay>
         <source src="./music/Justin Bieber-V2.mp3">
         </source>
-        Your browser isn't invited for super fun audio time.
     </audio>
 
     <div class="container">
         <div class="one">
-    <div class="one">
     <h1 class="one name-wrap">
-        <span class="aye">Aye yo</span>
-
-        <span id="name">
-            Minkky!
-            <img src="https://media2.giphy.com/media/v1.Y2lkPTZjMDliOTUydXJ0eDc2bDU0NTg2ZnY3azBxdnlveTc4azE3NTF1aGJuZmZveDNoNyZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/EGNi09y1CXeyA/200.gif"
-                 class="corner-gif left-top">
-
-            <img src="https://media2.giphy.com/media/v1.Y2lkPTZjMDliOTUydXJ0eDc2bDU0NTg2ZnY3azBxdnlveTc4azE3NTF1aGJuZmZveDNoNyZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/EGNi09y1CXeyA/200.gif"
-                 class="corner-gif right-top">
+        Aye yo
+        <span class="name-box">
+            <span id="name">Minkky!</span>
         </span>
     </h1>
-
     <p class="two" id="greetingText">
         This program is supported by <strong>PaoPee.</strong>
     </p>
-</div>
-
 </div>
 
 
