--- a/index.html
+++ b/index.html
@@ -26,12 +26,21 @@
 
     <div class="container">
         <div class="one">
-    <h1 class="one name-wrap">
+    <h1 class="one">
+    <span class="aye-wrap">
         Aye yo
-        <span class="name-box">
-            <span id="name">Minkky!</span>
-        </span>
-    </h1>
+        <img
+          src="img/is You.gif"
+          class="aye-gif"
+          alt=""
+        >
+    </span>
+
+    <span class="name-box">
+        <span id="name">Minkky!</span>
+    </span>
+</h1>
+
     <p class="two" id="greetingText">
         This program is supported by <strong>PaoPee.</strong>
     </p>
