--- a/index.html
+++ b/index.html
@@ -29,16 +29,18 @@
     <h1 class="one">
     <span class="aye-wrap">
         Aye yo
+    </span>
+    <span class="name-box">
+    <span id="name" class="minkky-wrap">
+        Minkky!
         <img
-          src="img/is You.gif"
-          class="aye-gif"
+          src="https://media2.giphy.com/media/v1.Y2lkPTZjMDliOTUyemRqYXE4eXI2cDZxdGtqNjExaHQ3Y3BvM2VzcThzYTF5bXJ6azR3MCZlcD12MV9zdGlja2Vyc19zZWFyY2gmY3Q9cw/EGNi09y1CXeyA/200w.gif"
+          class="minkky-gif"
           alt=""
         >
     </span>
+</span>
 
-    <span class="name-box">
-        <span id="name">Minkky!</span>
-    </span>
 </h1>
 
     <p class="two" id="greetingText">
