--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="profile">
                 <img src="./img/Is You.png" alt="Profile Picture" class="profile-image" />
                 <h2 class="profile-name">
-  <span class="star-name">Mingkamon</span> 💚
+  <span class="star-name">Mingkamon</span> 🦋
 </h2>
 
             </div>
@@ -162,9 +162,9 @@
 
         <div class="nine">
             <p>PP ก็ขออวยพรให้มิ้งอีกครั้ง ขอให้มิ้งโชคดีตลอดไป!🍀ྀི</p>
-            <p>หวังว่าสิ่งนี้พอจะทำให้มิ้งยิ้มได้น้าาา </p>
+            <p>หวังว่าสิ่งนี้พอจะทำให้มิ้งยิ้มได้น้า </p>
             <p id="replay">หรือกดคลิก! ถ้าอยากจะดูอีกครั้ง</p>
-            <p>Goodluck & See yaa!!</p>
+            <p>Good luck & See yaa!!</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
